[package]
name = "catalog-of-markdown"
version = "0.1.5"
edition = "2021"
authors = ["ccQpein"]
description = "Generate the catalog of markdown file."
license = "MIT"
repository = "https://github.com/ccqpein/catalog-of-markdown"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
clap = { version = "4", features = ["derive"] }
